Button width fix and column side spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -519,9 +519,11 @@ cite {
 @media screen and (min-width: 50em) {
   .col--side {
     position: absolute;
-    top: 10px;
+    top: 25px;
     right: 15px;
     width: 330px; } }
+.col--side p {
+  margin-bottom: 15px; }
 
 .col--bottom {
   padding-top: 20px; }
@@ -580,14 +582,18 @@ cite {
   padding: 20px;
   margin: 30px 0;
   text-align: center;
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  max-width: 320px; }
+  @media screen and (min-width: 50em) {
+    .btn {
+      width: auto; } }
   .btn span:after {
     background-image: url(../img/arrow.png);
     background-size: 22px 17px;
     background-repeat: no-repeat;
-    background-position: 10px 0;
+    background-position: 15px 0;
     content: '';
-    padding-left: 33px;
+    padding-left: 38px;
     height: 17px;
     width: 22px; }
   .btn:hover {
